syntax = "proto3";

message SystemManifest {
    string SID = 1;
    SystemTopology topology = 2;
    SystemSettings settings = 3; 
    bool terminating = 4;
    Composition composition = 5;
}

enum Composition {
    SINGLE = 0;
    MULTI_PART = 1;
}

message SystemTopology {
    repeated Device devices = 1; 
    repeated Diagnostic diagnostics = 2; 
    repeated SubSystem subSystems = 3;
}

message SystemSettings {
    string name = 1;
    string Serial = 2;
    SystemType type = 3;
    int32 primaryUploadFrequeny = 4;
    int32 diagnosticUploadFrequeny = 5;
    repeated Calibration calibration = 6;
}

message Calibration {
	string name = 1;
	float zero = 2;
	float slope = 3;
	// We need to decide what else we think is calibration
}

message SubSystem {
    string SSID = 1;
    SystemSettings Settings = 2;
    string PSID = 3;
}

message Device {
    string name = 1;
    string SSID = 2;
    Units units = 3;
}

message Diagnostic {
    string name = 1;
    string SSID = 2;
    Units units = 3;

}

enum SystemType { 
    AQSYNC = 0;
    AQLITE = 1;
    PAM = 2;
    FOUR_ZERO_FIVE = 3;
    OZONE = 4;
    CO2 = 5;
    WEATHER = 6;
    PARTICLE = 7;

}

enum Units {
    OTHER = 0;
    PPM = 1;
    PPB = 2;
    V = 3;
    BYTE = 4;
    DATETIME = 5;

}

message Upload {
    string SID = 1;
    int32 DateUploaded = 2;
    int32 pointsTaken = 3;
    repeated DataPoint dataPoints = 4;  
    bool terminated = 5;
    Composition composition = 6;
}

message DataPoint {
    string name = 1;
    string value = 2;
    Units units = 3;
    string SSID = 4;
}
